Swagger fix, currentAmount added
